# hotels

./: .gitignore  README.md  buildspec.yml  dvc.yaml  pyproject.toml  streamlit_app.py
.dvc/: config
.streamlit/: config.toml
data/: .gitignore  country_code.csv  hotels.parquet.dvc
data/aggregated/: .gitignore
data/cleaned/: .gitignore
hotels/: __init__.py  aggregations.py  dashboard.py  data.py  data_local.py  data_processing.py  data_retrieval.py  data_snowflake.py  load_data.py  models.py  processing.py
hotels/dashboard/: __init__.py
notebooks/: EDA1-reservations.html  EDA1-reservations.ipynb  EDA2.html  EDA2.ipynb  utils.py
pages/: 1_Booking_of_the_Day.py  1_Hotel_PMS.py  1_📖_Hotel_PMS.py  2_Internal_Dashboards.py  2_📊_Internal_Dashboards.py  9_Debug.py
pages/tab/: cancallations.py  hotel_usage.py  marketing.py  sales.py
pipelines/: aggregate_data.py  clean_data.py  retrieve_data.py
script/: create_table_reservation.sql  ingest_data_to_snowflake.py
test/integration/pages/: test_hotel_pms.py  test_internal_dashboards.py
test/unit/data/: test_action_data.py  test_booking_data.py
