[tool.poetry]
name = "hotels"
version = "0.1"
description = "Streamlit Dashboard for Hotels data set"
authors = ["Hironori Sakai <stdiff@outlook.de>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9.8,<3.10"
streamlit = "1.29"
pandas = "2.1.1"
numpy = "1.26.1"
altair = "5.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
jupyterlab = "3.6.3"
jupyterlab-code-formatter = "1.5.3"
digautoprofiler = "^1.0.1"
joblib = "^1.2.0"
pytest = "^7.4.3"
pandera = "^0.18.0"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"

[tool.poetry.scripts]
retrieve_data = "pipelines.retrieve_data:main"
clean_data = "pipelines.clean_data:main"
aggregate_data = "pipelines.aggregate_data:main"

[tool.black]
line-length = 120
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
